feat(ui): unify button styles and hidden radios; forms redesigned to match reference; 14 logo style prompts and idea prioritization; Fal endpoint switched to https://fal.run; fallback env flags DISABLE_WP_IMAGE_FALLBACK and DISABLE_IMAGE_FALLBACK honored

--- a/preview-plugin.html
+++ b/preview-plugin.html
@@ -140,8 +140,8 @@
           </div>
         </div>
         <div class="bmms-actions">
-          <button type="button" class="btn bmms-back">Back</button>
-          <button type="button" class="btn btn-primary bmms-next">Continue</button>
+          <button type="button" class="bmms-btn bmms-back">Back</button>
+          <button type="button" class="bmms-btn bmms-btn-primary bmms-next">Continue</button>
         </div>
       </div>
     </section>
@@ -158,9 +158,9 @@
           <input type="text" name="brand_text" placeholder="I suggest your business name here" />
         </label>
         <div class="bmms-actions">
-          <button type="button" class="btn bmms-skip">Skip</button>
-          <button type="button" class="btn bmms-back">Back</button>
-          <button type="button" class="btn btn-primary bmms-next">Continue</button>
+          <button type="button" class="bmms-btn bmms-skip">Skip</button>
+          <button type="button" class="bmms-btn bmms-back">Back</button>
+          <button type="button" class="bmms-btn bmms-btn-primary bmms-next">Continue</button>
         </div>
       </div>
     </section>
@@ -179,8 +179,8 @@
         </div>
         <div class="bmms-slides"></div>
         <div class="bmms-actions">
-          <button type="button" class="btn bmms-back">Back</button>
-          <button type="button" class="btn btn-primary bmms-next">Continue</button>
+          <button type="button" class="bmms-btn bmms-back">Back</button>
+          <button type="button" class="bmms-btn bmms-btn-primary bmms-next">Continue</button>
         </div>
       </div>
     </section>
@@ -196,9 +196,9 @@
           <img id="bmms-final-image" class="bmms-final-image" alt="Final logo" />
         </div>
         <div class="bmms-actions">
-          <button type="button" class="btn bmms-back">Back</button>
-          <button type="button" class="btn bmms-zoom">Zoom</button>
-          <button type="button" class="btn btn-primary bmms-download">Download</button>
+          <button type="button" class="bmms-btn bmms-back">Back</button>
+          <button type="button" class="bmms-zoom">Zoom</button>
+          <button type="button" class="bmms-btn bmms-btn-primary bmms-download">Download</button>
         </div>
         <div class="bmms-zoom-overlay" style="display:none">
           <button type="button" class="bmms-zoom-close">×</button>
@@ -236,7 +236,7 @@
       <textarea name="description" rows="4" placeholder="e.g., Artisan bakery specializing in sourdough"></textarea>
     </label>
     <div class="bmms-actions">
-      <button type="submit" class="btn btn-primary">Continue</button>
+      <button type="submit" class="bmms-btn bmms-btn-primary">Continue</button>
     </div>
   </form>
 
@@ -283,8 +283,8 @@
         </div>
       </div>
       <div class="bmms-actions">
-        <button type="button" class="btn bmms-back">Back</button>
-        <button type="button" class="btn btn-primary bmms-next">Continue</button>
+        <button type="button" class="bmms-btn bmms-back">Back</button>
+        <button type="button" class="bmms-btn bmms-btn-primary bmms-next">Continue</button>
       </div>
     </div>
   </section>
@@ -301,9 +301,9 @@
         <input type="text" name="brand_text" placeholder="I suggest your business name here" />
       </label>
       <div class="bmms-actions">
-        <button type="button" class="btn bmms-skip">Skip</button>
-        <button type="button" class="btn bmms-back">Back</button>
-        <button type="button" class="btn btn-primary bmms-next">Continue</button>
+        <button type="button" class="bmms-btn bmms-skip">Skip</button>
+        <button type="button" class="bmms-btn bmms-back">Back</button>
+        <button type="button" class="bmms-btn bmms-btn-primary bmms-next">Continue</button>
       </div>
     </div>
   </section>
@@ -323,8 +323,8 @@
       <div class="bmms-endpoint-banner" style="font-size:12px;color:#6b7280;margin:6px 0 10px;display:block;">Generator: <span id="bmms-endpoint-text">WordPress REST</span></div>
       <div class="bmms-slides"></div>
       <div class="bmms-actions">
-        <button type="button" class="btn bmms-back">Back</button>
-        <button type="button" class="btn btn-primary bmms-next">Continue</button>
+        <button type="button" class="bmms-btn bmms-back">Back</button>
+        <button type="button" class="bmms-btn bmms-btn-primary bmms-next">Continue</button>
       </div>
     </div>
   </section>
@@ -340,9 +340,9 @@
         <img id="bmms-final-image" class="bmms-final-image" alt="Final logo" />
       </div>
       <div class="bmms-actions">
-        <button type="button" class="btn bmms-back">Back</button>
-        <button type="button" class="btn bmms-zoom">Zoom</button>
-        <button type="button" class="btn btn-primary bmms-download">Download</button>
+        <button type="button" class="bmms-btn bmms-back">Back</button>
+        <button type="button" class="bmms-zoom">Zoom</button>
+        <button type="button" class="bmms-btn bmms-btn-primary bmms-download">Download</button>
       </div>
       <div class="bmms-zoom-overlay" style="display:none">
         <button type="button" class="bmms-zoom-close">×</button>
