style(wizard): apply GoDaddy-style framing (bmms-theme-godaddy)  card container, sticky progress pill, sticky action bar, and gradient primary button; ui: hook progress pill updates in bmms showStep and add bmms-theme to preview markup

--- a/preview-plugin.html
+++ b/preview-plugin.html
@@ -67,8 +67,9 @@
     };
   </script>
   <!-- BM Multi-Step Form Preview -->
-  <div id="bm-ms-form" class="bm-ms-form">
+  <div id="bm-ms-form" class="bm-ms-form bmms-theme-godaddy">
     <div class="bm-ms-form-content">
+      <div class="bmms-progress"></div>
 
     <!-- Step 1: Basic details -->
     <form id="bmms-step1" class="bmms-step" novalidate>
